@@ -7,30 +7,25 @@ lazy val specs2 = Seq(
 
 lazy val twirl = project
   .in(file("."))
+  .enablePlugins(PlayRootProject)
   .aggregate(api, parser, compiler)
   .settings(common: _*)
-  .settings(crossScala: _*)
-  .settings(noPublish: _*)
 
 lazy val api = project
   .in(file("api"))
-  .enablePlugins(Playdoc, Omnidoc)
+  .enablePlugins(PlayLibrary, Playdoc)
   .settings(common: _*)
-  .settings(crossScala: _*)
-  .settings(publishMaven: _*)
   .settings(
     name := "twirl-api",
     libraryDependencies += commonsLang,
     libraryDependencies ++= scalaXml(scalaVersion.value),
-    libraryDependencies ++= specs2,
-    OmnidocKeys.githubRepo := "playframework/twirl"
+    libraryDependencies ++= specs2
   )
 
 lazy val parser = project
   .in(file("parser"))
+  .enablePlugins(PlayLibrary)
   .settings(common: _*)
-  .settings(crossScala: _*)
-  .settings(publishMaven: _*)
   .settings(
     name := "twirl-parser",
     libraryDependencies ++= scalaParserCombinators(scalaVersion.value),
@@ -39,10 +34,9 @@ lazy val parser = project
 
 lazy val compiler = project
   .in(file("compiler"))
+  .enablePlugins(PlayLibrary)
   .dependsOn(api, parser % "compile;test->test")
   .settings(common: _*)
-  .settings(crossScala: _*)
-  .settings(publishMaven: _*)
   .settings(
     name := "twirl-compiler",
     libraryDependencies += scalaCompiler(scalaVersion.value),
@@ -51,71 +45,22 @@ lazy val compiler = project
 
 lazy val plugin = project
   .in(file("sbt-twirl"))
+  .enablePlugins(PlaySbtPlugin)
   .dependsOn(compiler)
   .settings(common: _*)
-  .settings(scriptedSettings: _*)
-  .settings(publishSbtPlugin: _*)
   .settings(
     name := "sbt-twirl",
     organization := "com.typesafe.sbt",
-    sbtPlugin := true,
     libraryDependencies ++= specs2,
-    scriptedLaunchOpts += ("-Dproject.version=" + version.value),
-    scriptedLaunchOpts += "-XX:MaxPermSize=256m",
     resourceGenerators in Compile <+= generateVersionFile
   )
+
+playBuildRepoName in ThisBuild := "twirl"
 
 // Shared settings
 
 def common = Seq(
-  organization := "com.typesafe.play",
-  scalaVersion := sys.props.get("scala.version").getOrElse("2.10.5"),
-  scalacOptions := Seq("-unchecked", "-deprecation", "-encoding", "utf8"),
   resolvers += "scalaz-bintray" at "https://dl.bintray.com/scalaz/releases"
-)
-
-def crossScala = Seq(
-  crossScalaVersions := Seq("2.10.5", "2.11.6"), {
-    unmanagedSourceDirectories in Compile +=
-      (sourceDirectory in Compile).value / s"scala-${scalaBinaryVersion.value}"
-  }
-)
-
-def publishMaven = Seq(
-  publishTo := {
-    if (isSnapshot.value) Some(Opts.resolver.sonatypeSnapshots)
-    else Some(Opts.resolver.sonatypeStaging)
-  },
-  homepage := Some(url("https://github.com/playframework/twirl")),
-  licenses := Seq("Apache 2" -> url("http://www.apache.org/licenses/LICENSE-2.0")),
-  pomExtra := {
-    <scm>
-      <url>https://github.com/playframework/twirl</url>
-      <connection>scm:git:git@github.com:playframework/twirl.git</connection>
-    </scm>
-    <developers>
-      <developer>
-        <id>playframework</id>
-        <name>Play Framework Team</name>
-        <url>https://github.com/playframework</url>
-      </developer>
-    </developers>
-  },
-  pomIncludeRepository := { _ => false }
-)
-
-def publishSbtPlugin = Seq(
-  publishMavenStyle := false,
-  publishTo := {
-    if (isSnapshot.value) Some(Classpaths.sbtPluginSnapshots)
-    else Some(Classpaths.sbtPluginReleases)
-  }
-)
-
-def noPublish = Seq(
-  publish := {},
-  publishLocal := {},
-  publishTo := Some(Resolver.file("no-publish", crossTarget.value / "no-publish"))
 )
 
 // Version file
